--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "maatwebsite/excel": "^3.1",
+        "mongodb/mongodb": "^1.9",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
