--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "laravel/ui": "^3.3",
         "maatwebsite/excel": "^3.1",
         "mongodb/mongodb": "^1.9",
-        "tymon/jwt-auth": "^1.0",
-        "ext-mongodb": "^1.1.0"
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
